syntax = "proto3";
package hetpaxosrefconfig;


// specifies a participant (learner or acceptor)
// also provides a short name for that participant used elsewhere in the Config
message Address {
  string publicKey = 1;
  string hostname = 2;
  uint32 port = 3;
  string name = 4;
}

// a set of acceptors sufficient to make a learner decide
message Quorum {
  repeated string names = 1;
}

// all minimal sets of acceptors sufficient to make a specific learner decide
message MinimalQuorums {
  repeated Quorum quorums = 1;
}

// Minimal Safety Sets for edges associated with one learner 
message SafetyEdges {
  map<string, MinimalQuorums> safetySets = 1;
}


// configures our node to participate in consensus.
// Note that specifying our privateKey implicitly defines our role, etc.
message Config {
  string privateKey = 1;
  string proposal = 2;
  map<string, MinimalQuorums> learners = 3;
  map<string, SafetyEdges> safetySets = 4;
  repeated Address addresses = 5;
}
